# cmake-examples

01-basic/B-hello-headers/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
02-sub-projects/A-basic/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary2/: CMakeLists.txt
problems/: CMake常见的变量.md  Cmake添加打印的方法.md  cmake找不到编译器问题.md  执行cmake与gitbash的sh_exe冲突.md
